# Internal/dto/Add_task_dto.go
@@ -9,6 +9,6 @@ type AddTask struct {
 	AssigneeId     int64     `json:"assigneeid" binding:"required"`
 	Parent_task_id int64     `json:"parent_task_id"`
 	DueDate        time.Time `json:"due_date" binding:"required" time_format:"2006-01-02"`
-	CreateUserId   int64
-	WorkSpaceId    int64
+	CreateUserId   int64     `json:"-" swaggerignore:"true"`
+	WorkSpaceId    int64     `json:"-" swaggerignore:"true"`
 }
