# Internal/dto/Edit_task_dto.go
@@ -2,10 +2,10 @@ package dto
 
 type EditTask struct {
 	Id          int64  `json:"id" binding:"required"`
-	Titel       string `json:"titel" binding:"required"`
-	Description string `json:"description" binding:"required"`
-	Status      string `json:"status" binding:"required"`
-	Priority    string `json:"priorty" binding:"required"`
+	Titel       string `json:"titel"`
+	Description string `json:"description"`
+	Status      string `json:"status"`
+	Priority    string `json:"priorty"`
 	Version     int64  `json:"version" binding:"required"`
-	UserId      int64
+	UserId      int64  `json:"-" swaggerignore:"true"`
 }
