# docs/swagger.json
@@ -266,7 +266,7 @@
                     {
                         "type": "string",
                         "description": "Task Status",
-                        "name": "status",
+                        "name": "Status",
                         "in": "query"
                     },
                     {
@@ -758,10 +758,6 @@
                 "assigneeid": {
                     "type": "integer"
                 },
-                "createUserId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
                 "description": {
                     "type": "string"
                 },
@@ -776,10 +772,6 @@
                 },
                 "titel": {
                     "type": "string"
-                },
-                "workSpaceId": {
-                    "type": "integer",
-                    "format": "int64"
                 }
             }
         },
@@ -801,11 +793,7 @@
         "dto.EditTask": {
             "type": "object",
             "required": [
-                "description",
                 "id",
-                "priorty",
-                "status",
-                "titel",
                 "version"
             ],
             "properties": {
@@ -823,10 +811,6 @@
                 },
                 "titel": {
                     "type": "string"
-                },
-                "userId": {
-                    "type": "integer",
-                    "format": "int64"
                 },
                 "version": {
                     "type": "integer"
